<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.ostrichemulators.semantics.tool</groupId>
	<artifactId>parent</artifactId>
	<version>1.1.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>OS-EM Semantic Tool Parent</name>
	<description>A Semantic database explorer and management tool</description>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<rdf.version>2.5.4</rdf.version>
		<lucene.version>8.0.0</lucene.version>
		<spring.version>5.1.3.RELEASE</spring.version>
		<http.version>4.5.8</http.version>
		<poi.version>4.1.0</poi.version>
	</properties>

	<modules>
		<module>gui</module>
		<module>common</module>
	</modules>
  
	<scm>
		<connection>scm:git:https://github.com/Ostrich-Emulators/semtool.git</connection>
		<url>https://github.com/Ostrich-Emulators/semtool</url>
	</scm>
    
	<dependencies>
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.11.3</version>
		</dependency>
		<dependency>
			<groupId>net.sf.jung</groupId>
			<artifactId>jung-algorithms</artifactId>
			<version>2.1.1</version>
		</dependency>
		<dependency>
			<groupId>net.sf.jung</groupId>
			<artifactId>jung-api</artifactId>
			<version>2.1.1</version>
		</dependency>
		<dependency>
			<groupId>net.sf.jung</groupId>
			<artifactId>jung-graph-impl</artifactId>
			<version>2.1.1</version>
		</dependency>
		<dependency>
			<groupId>org.sourceforge.jlibeps</groupId>
			<artifactId>jlibeps</artifactId>
			<version>0.1</version>
		</dependency>
    
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>jena-core</artifactId>
			<version>2.13.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>jena-arq</artifactId>
			<version>2.13.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>jena-iri</artifactId>
			<version>1.1.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>jena-tdb</artifactId>
			<version>1.1.2</version>
		</dependency>
		
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>${poi.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>${poi.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml-schemas</artifactId>
			<version>${poi.version}</version>
		</dependency>
    
		<dependency>
			<groupId>net.sf.supercsv</groupId>
			<artifactId>super-csv</artifactId>
			<version>2.4.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.5</version>
		</dependency>
		<!--dependency>
			<groupId>org.eclipe.rdf4j</groupId>
			<artifactId>rdf4j-rio-rdfxml</artifactId>
			<version>${rdf.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipe.rdf4j</groupId>
			<artifactId>rdf4j-queryresultio-sparqljson</artifactId>
			<version>${rdf.version}</version>
		</dependency-->

		<!--dependency>
			<groupId>org.eclipe.rdf4j</groupId>
			<artifactId>rdf4j-queryparser-sparql</artifactId>
			<version>${rdf.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipe.rdf4j</groupId>
			<artifactId>rdf4j-sail-nativerdf</artifactId>
			<version>${rdf.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipe.rdf4j</groupId>
			<artifactId>rdf4j-sail-api</artifactId>
			<version>${rdf.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipe.rdf4j</groupId>
			<artifactId>rdf4j-sail-memory</artifactId>
			<version>${rdf.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipe.rdf4j</groupId>
			<artifactId>rdf4j-repository-http</artifactId>
			<version>${rdf.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipe.rdf4j</groupId>
			<artifactId>rdf4j-repository-sail</artifactId>
			<version>${rdf.version}</version>
		</dependency-->
		<dependency>
			<groupId>net.sf.jgrapht</groupId>
			<artifactId>jgrapht</artifactId>
			<version>0.8.3</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-core</artifactId>
			<version>${lucene.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-analyzers-common</artifactId>
			<version>${lucene.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-queryparser</artifactId>
			<version>${lucene.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-suggest</artifactId>
			<version>${lucene.version}</version>
		</dependency>
		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.11</version>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.6</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-core</artifactId>
			<version>2.9.8</version>
		</dependency>
		<dependency>
			<groupId>jaxen</groupId>
			<artifactId>jaxen</artifactId>
			<version>1.1.6</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>${http.version}</version>
		</dependency>
		<!--dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpcore</artifactId>
			<version>4.4.11</version>
		</dependency-->
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient-cache</artifactId>
			<version>${http.version}</version>
		</dependency>
	 <dependency>
	  <groupId>org.eclipse.rdf4j</groupId>
	  <artifactId>rdf4j-model</artifactId>
	  <version>${rdf.version}</version>
	 </dependency>
	 <dependency>
	  <groupId>org.eclipse.rdf4j</groupId>
	  <artifactId>rdf4j-query</artifactId>
	  <version>${rdf.version}</version>
	 </dependency>
	 <dependency>
	  <groupId>org.eclipse.rdf4j</groupId>
	  <artifactId>rdf4j-sail-nativerdf</artifactId>
	  <version>${rdf.version}</version>
	 </dependency>
	</dependencies>
    
	<profiles>
		<profile>
			<id>full-build</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>0.8.3</version>
						<configuration>
							<!-- if we ever use the "check" feature, we'll need some rules -->
							<rules/>
						</configuration>

						<executions>
							<execution>
								<id>pre-unit-test</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
								<configuration>
									<propertyName>surefireArgLine</propertyName>
								</configuration>
							</execution>
							<execution>
								<id>post-unit-test</id>
								<phase>test</phase>
								<goals>
									<goal>report</goal>
								</goals>
							</execution>
							<execution>
								<id>default-report</id>
								<phase>prepare-package</phase>
								<goals>
									<goal>check</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
  
	<reporting>
		<plugins>			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.4</version>
				<configuration>
					<aggregate>true</aggregate>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.3</version>
			</plugin>
		</plugins>
	</reporting>

	<build>    
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5.1</version>
				<configuration>
					<showDeprecation>true</showDeprecation>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
				</configuration>
 
			</plugin>
      
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
						<manifestEntries>
							<Implementation-Build>${buildNumber}</Implementation-Build>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>buildnumber-maven-plugin</artifactId>
				<version>1.4</version>
				<executions>
					<execution>
						<phase>generate-resources</phase>
						<goals>
							<goal>create</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<doCheck>false</doCheck>
					<doUpdate>false</doUpdate>
					<getRevisionOnlyOnce>true</getRevisionOnlyOnce>
					<shortRevisionLength>15</shortRevisionLength>
					<timestampFormat>yyyy-MM-dd H:mm:ssZ</timestampFormat>
					<addOutputDirectoryToResources>true</addOutputDirectoryToResources>
					<properties>
						<maven.artifact>${project.artifactId}</maven.artifact>
						<rdf.version>${rdf.version}</rdf.version>
						<lucene.version>${lucene.version}</lucene.version>
						<spring.version>${spring.version}</spring.version>
						<http.version>${http.version}</http.version>
						<poi.version>${poi.version}</poi.version>
					</properties>s
				</configuration>
			</plugin>
		</plugins>
	</build>

	<issueManagement>
		<url>https://github.com/Ostrich-Emulators/semtool/issues</url>
		<system>GitHub</system>
	</issueManagement>
  
	<organization>
		<url>http://ostrich-emulators.com</url>
		<name>Ostrich Emulators</name>
	</organization>

	<distributionManagement>
		<site>
			<id>Ostrich-Emulators.github.io</id>
			<url>http://ostrich-emulators.github.io/semtool</url>
		</site>
	</distributionManagement>

	<developers>
		<developer>
			<id>ry99</id>
			<name>Ry Bobko</name>
			<email>ryan@ostrich-emulators.com</email>
			<roles>
				<role>Project Manager</role>
				<role>Architect</role>
			</roles>
			<organization>Ostrich Emulators, LLC</organization>
			<timezone>-5</timezone>
		</developer>
		<developer>
			<id>hwalbert</id>
			<name>Harold Walbert</name>
			<roles>
				<role>Data Specialist</role>
			</roles>
			<timezone>-5</timezone>
		</developer>
		<developer>
			<id>quest5020</id>
			<name>John Marquiss</name>
			<roles>
				<role>Developer</role>
			</roles>
			<timezone>???</timezone>
		</developer>
		<developer>
			<id>wildlyadequate</id>
			<name>Wayne Warren</name>
			<roles>
				<role>Developer</role>
			</roles>
			<timezone>-8</timezone>
		</developer>
	</developers>
</project>
